@@ -1733,16 +1733,6 @@ data:
 				-99,58,59,60,61,62,63,64,
 				65,66,67,68,69,70,71,72,
 				-99,74,75,76,77,78,79,-99;
-	three_dmn_rec_var=    	 1, 2, 3, 4, 5, 6, 7, 8,
-				 9,10,11,12,13,14,15,16,
-				17,18,19,20,21,22,23,24,
-				-99,-99,-99,-99,-99,-99,-99,-99,
-				33,34,35,36,37,38,39,40,
-				41,42,43,44,45,46,47,48,
-				49,50,51,52,53,54,55,56,
-				-99,58,59,60,61,62,63,64,
-				65,66,67,68,69,70,71,72,
-				-99,74,75,76,77,78,79,-99;
 	zg=              	 1, 2, 3, 4, 5, 6, 7, 8,9,10,11,12,
 				13,14,15,16,17,18,19,20,21,22,23,24,
 	                        25,26,27,28,29,30,31,32,33,34,35,36,
