@@ -1,3 +1,7 @@
+2017-02-10  Charlie Zender  <zender@uci.edu>
+
+	* Restore correct values for three_dmn_rec_var in in.cdl that were inadvertently changed in 4.6.4
+
 2017-02-09  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.6.5-alpha01 release procedure:
